# AmpliGone

./: .gitignore  CHANGELOG.md  CITATION.cff  README.md  docs-requirements.txt  env.yml  mkdocs.yml  pyproject.toml  release-please-config.json  setup.py  sonar-project.properties  test-requirements.txt  test-requirements.yaml  versions.json
.github/workflows/: publish.yaml  release.yml  sync.yml  tests.yaml
0.2/: 404.html  index.html  sitemap.xml
0.2.0/: 404.html  index.html
0.2.0/amplicon-types/: index.html
0.2.0/installation/: index.html
0.2.0/search/: search_index.json
0.2.0/user-guide/: index.html
0.2.1/: index.html
0.2.1/changelog/: index.html
0.2.1/installation/: index.html
0.2.1/search/: search_index.json
0.2.1/user-guide/: index.html
0.2.2/: 404.html  sitemap.xml
0.2.2/amplicon-types/: index.html
0.2.2/changelog/: index.html
0.2.2/search/: search_index.json
0.2.2/user-guide/: index.html
0.2.3/: 404.html  index.html
0.2.3/amplicon-types/: index.html
0.2.3/changelog/: index.html
0.2.3/installation/: index.html
0.2.3/search/: search_index.json
0.2.3/user-guide/: index.html
0.2/amplicon-types/: index.html
0.2/installation/: index.html
0.2/search/: search_index.json
0.2/user-guide/: index.html
0.3.0/: sitemap.xml
0.3.0/amplicon-types/: index.html
0.3.0/changelog/: index.html
0.3.0/search/: search_index.json
0.3.1/: 404.html  index.html  sitemap.xml
0.3.1/changelog/: index.html
0.3.1/search/: search_index.json
0.3.1/user-guide/: index.html
0.3.2/: sitemap.xml
0.3.2/changelog/: index.html
0.3.2/installation/: index.html
0.3.2/search/: search_index.json
0.3.3/: 404.html  index.html  sitemap.xml
0.3.3/amplicon-types/: index.html
0.3.3/changelog/: index.html
0.3.3/installation/: index.html
0.3.3/search/: search_index.json
0.3.3/user-guide/: index.html
0.4.0/: 404.html  index.html  sitemap.xml
0.4.0/amplicon-types/: index.html
0.4.0/changelog/: index.html
0.4.0/installation/: index.html
0.4.1/: sitemap.xml
0.4.2/: 404.html  index.html
1.0.0/: 404.html  index.html  sitemap.xml
1.0.3/: 404.html  index.html  sitemap.xml
1.1.0/: 404.html  index.html
1.2.0/: 404.html  index.html
1.2.1/: 404.html  index.html
1.3.0/: 404.html  index.html
2.0.0/: 404.html  index.html
2.0.1/: 404.html  index.html
2.0.2/: 404.html  index.html
AmpliGone/: AmpliGone.py  CoordinateSearch.py  __init__.py  __main__.py  alignmentmatrix.py  alignmentpreset.py  args.py  cut_reads.py  cutlery.py  fasta2bed.py  func.py  io_ops.py  log.py  mappreset.py
docs/: amplicon-types.md  index.md  installation.md  user-guide.md
tests/: config.yaml
(+91 files in other folders)
