[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "AmpliGone"
dynamic = ["version"]
description = "AmpliGone is a tool which accurately removes primer sequences from FastQ NGS reads in an amplicon sequencing experiment"
readme = "README.md"
requires-python = ">=3.10"
license = "AGPL-3.0"
authors = [
    { name = "Florian Zwagemaker", email = "ids-bioinformatics@rivm.nl" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Intended Audience :: Science/Research"
]
dependencies = [
    "pysam==0.22.*",
    "pandas==2.2.*",
    "mappy==2.28",
    "biopython==1.84",
    "parmap==1.7.*",
    "parasail==1.3.4",
    "rich==13.7.*",
    "pgzip==0.3.4"
]

[project.urls]
homepage = "https://rivm-bioinformatics.github.io/AmpliGone/"
source-code = "https://github.com/RIVM-bioinformatics/AmpliGone"

[project.scripts]
ampligone = "AmpliGone.__main__:main"
AmpliGone = "AmpliGone.__main__:main"

[tool.setuptools]
include-package-data = true
packages = ["AmpliGone"]

[tool.setuptools.dynamic]
version = {attr = "AmpliGone.__version__"}

[tool.isort]
atomic = true
profile = "black"
float_to_top = true
skip_gitignore = true
line_length = 88

[tool.black]
line_length = 88
target-version = ["py310", "py311", "py312"]

[tool.pylint.main]
fail-under = 9
extension-pkg-allow-list = 'mappy'

[tool.pylint."messages control"]
disable = ["raw-checker-failed", "bad-inline-option", "locally-disabled", "file-ignored", "suppressed-message", "useless-suppression", "deprecated-pragma", "use-symbolic-message-instead", "use-implicit-booleaness-not-comparison-to-string", "use-implicit-booleaness-not-comparison-to-zero", "line-too-long", "logging-fstring-interpolation"]

[tool.flake8]
ignore = ["E501", "W503", "E203"]
select = ["E", "W", "F"]
extend-select = ["I"]
extend-exclude = [".git", "__pycache__", "docs", "build", "dist", ".venv"]
per-file-ignores = "AmpliGone/__init__.py:F401,tests/*:D,tests/*:S"

[tool.mypy]
disallow_untyped_defs = true
disallow_incomplete_defs = true
ignore_missing_imports = true
disallow_untyped_decorators = true
strict_equality = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
python_version = "3.10"
files = ["AmpliGone/", "tests/"]

[tool.pytest.ini_options]
addopts = "-sv --cov=AmpliGone/ tests/"